--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: picfeed
-description: App to read pictures from user feeds on reddit and pixiv.
+description: A picture feed client for reddit.
 
 publish_to: "none"
 
@@ -11,7 +11,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  reddit: any
+  provider: ^4.1.2
+  getflutter: ^1.0.11
+  draw: ^0.9.1
+  # git: git://github.com/misterfourtytwo/DRAW.git
+  # flutter_web_auth: ^0.2.4
+  url_launcher: ^5.4.7
+  uni_links: ^0.4.0
+
+dependency_overrides:
+  draw:
+    path: "/home/mr42/Public/flutter/xep/foreign/DRAW"
 
 flutter:
   uses-material-design: true
